@@ -1,3 +1,11 @@
+2005-01-12  Alan Modra  <amodra@bigpond.net.au>
+
+	* elf32-ppc.c (ppc_elf_howto_raw): Delete RELAX32* entries.
+	(ppc_elf_relax_section): Use PLT variants of RELAX32 relocs for
+	reaching PLT.
+	(ppc_elf_relocate_section): Handle R_PPC_RELAX32_PLT and
+	R_PPC_RELAX32PC_PLT.
+
 2005-01-11  Alan Modra  <amodra@bigpond.net.au>
 
 	* elf64-ppc.c (ppc64_elf_gc_sweep_hook): Follow indirect and warning
